@@ -11,6 +11,8 @@ COMING SOON (0.9.2)
     * Added to_csv() method to quickly save results as a CSV file.
     * Changed reduce() method to accept "initializer_factory" as
       an optional argument.
+* Added True and False as predicates to support "truth value testing" on
+  arbitrary objects (to match on truthy or falsy).
 * Fixed get_reader() bug that prevented encoding-fallback recovery when
   reading from StringIO buffers in Python 2.
 * Added CompositeSelector and CompositeQuery to provide a concise interface
